# bulk-intel

./: .gitignore  CLAUDE.md  JULES-SUBMISSION-READY.md  PHASE-1-ROUND-1-SUBMISSION.md  README.md  gemini.md  phase-1-round-1-manifest.json  pyproject.toml  requirements.txt  send_tasks_to_jules.py  submit_to_jules.py
config/: __init__.py  settings.py
data/: bottle.xlsx  sample_manifest.csv
enrichment/: __init__.py  bsr_provider.py  catalog_loader.py  enricher.py  playwright_serp_client.py  serp_backend_factory.py  serp_cache.py  serp_orchestrator.py  serp_price_provider.py  serp_state.py
graphify-out/: .graphify_cached.json  .graphify_uncached.txt  GRAPH_REPORT.md  graph.html  graph.json
ingestion/: __init__.py  loader.py
intelligence/: __init__.py  channel.py  decision.py  grouping.py  homogeneity.py  matching.py  pricing.py  profit.py  scenario.py  scoring.py  sell_through_model.py  velocity.py
logs/: jules_session_submission.json
output/: __init__.py  r.json  reporter.py
pipeline/: __init__.py  run_pipeline.py
processing/: __init__.py  cleaner.py
tests/: conftest.py  test_backtest.py  test_bsr_provider.py  test_catalog_loader.py  test_channel_router.py  test_cleaner.py  test_condition_aware_economics.py  test_cost_engine.py  test_feedback_loop.py  test_grouping.py  test_homogeneity.py  test_loader.py  test_matching.py  test_pipeline.py  test_playwright_serp_client.py  test_pricing_and_scoring.py  test_profit_ci.py  test_real_manifest_schema.py  test_rollup.py  test_sell_through_model.py  test_serp_cache_stats.py  test_serp_orchestrator.py  (+2 more)
(+65 files in other folders)
